@@ -15,6 +15,9 @@ s Subcommand
 e Expression
 E Expression that should be in braces
 
+d Definition. That arg defines a new command.
+  If followed by =cmd, it copies syntax from cmd.
+
 c  Code, checked in surrounding context
 cg Code, checked in global context
 cn Code, checked in a virtual namespace
