@@ -14,7 +14,7 @@
 ##nagelfar syntax _obj,pdf4tcl\ finish 0
 ##nagelfar syntax _obj,pdf4tcl\ configurelist x
 
-##nagelfar syntax pdf4tcl::pdf4tcl x p*
+##nagelfar syntax pdf4tcl::pdf4tcl d=_obj,pdf4tcl p*
 ##nagelfar option pdf4tcl::pdf4tcl -file
 ##nagelfar return pdf4tcl::pdf4tcl _obj,pdf4tcl
 
@@ -40,5 +40,9 @@ snit::type pdf4tcl::pdf4tcl {
     }
 }
 
-set x [pdf4tcl::pdf4tcl %AUTO% -file x]
+set x [pdf4tcl::pdf4tcl %AUTO% -file xx]
 $x cleanup
+
+pdf4tcl::pdf4tcl myobj -file xx
+myobj cleanup
+
